--- a/view/home/index.html
+++ b/view/home/index.html
@@ -44,51 +44,7 @@
     </style>
 </head>
 <body>
-    <!-- 导航栏 -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <i class="bi bi-house-door"></i> Hugo 管理器
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/">
-                            <i class="bi bi-house"></i> 首页
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/files">
-                            <i class="bi bi-folder"></i> 文件管理
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/images">
-                            <i class="bi bi-folder2-open"></i> 静态文件
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/deploy">
-                            <i class="bi bi-cloud-upload"></i> 部署管理
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/trash">
-                            <i class="bi bi-trash"></i> 回收站
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/settings">
-                            <i class="bi bi-gear"></i> 设置
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {{ template "header" . }}
 
     <!-- 主标题区域 -->
     <div class="hero-section">
@@ -563,6 +519,7 @@
             }
         });
     </script>
+    <script src="/static/js/i18n.js"></script>
 </body>
 </html>
 {{ end }}
