--- a/view/layout/header.html
+++ b/view/layout/header.html
@@ -12,32 +12,32 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link{{if eq .Page "home"}} active{{end}}" href="/">
-                        <i class="bi bi-house"></i> <span data-i18n="nav_home">首页</span>
+                        <i class="bi bi-house"></i> <span data-i18n="nav.home">首页</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link{{if eq .Page "files"}} active{{end}}" href="/files">
-                        <i class="bi bi-folder"></i> <span data-i18n="nav_files">文件管理</span>
+                        <i class="bi bi-folder"></i> <span data-i18n="nav.files">文件管理</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link{{if eq .Page "images"}} active{{end}}" href="/images">
-                        <i class="bi bi-folder2-open"></i> <span data-i18n="nav_static">静态文件</span>
+                        <i class="bi bi-folder2-open"></i> <span data-i18n="nav.images">静态文件</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link{{if eq .Page "deploy"}} active{{end}}" href="/deploy">
-                        <i class="bi bi-cloud-upload"></i> <span data-i18n="nav_deploy">部署管理</span>
+                        <i class="bi bi-cloud-upload"></i> <span data-i18n="nav.deploy">部署管理</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link{{if eq .Page "trash"}} active{{end}}" href="/trash">
-                        <i class="bi bi-trash"></i> <span data-i18n="nav_trash">回收站</span>
+                        <i class="bi bi-trash"></i> <span data-i18n="nav.trash">回收站</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link{{if eq .Page "settings"}} active{{end}}" href="/settings">
-                        <i class="bi bi-gear"></i> <span data-i18n="nav_settings">设置</span>
+                        <i class="bi bi-gear"></i> <span data-i18n="nav.settings">设置</span>
                     </a>
                 </li>
             </ul>
