--- a/view/layout/base.html
+++ b/view/layout/base.html
@@ -13,6 +13,10 @@
         {{ template "content" . }}
     </div>
     {{ template "footer" . }}
+    
+    <!-- 加载必要的JavaScript文件 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/static/js/i18n.js"></script>
 </body>
 </html>
 {{ end }}
